// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importFromLinuxPerf forks.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13909899999271147,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13909899999271147,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "main (/workdir/forks)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13909899999271147,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5gammav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.024917999980971217,
      "totalWeight": 0.024917999980971217,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5deltav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.022544999956153333,
      "totalWeight": 0.06908300000941381,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z4betav (/workdir/forks)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.046852000057697296,
      "totalWeight": 0.046852000057697296,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5alphav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.04478399999788962,
      "totalWeight": 0.04478399999788962,
    },
  ],
  "name": "forks tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 978.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 879.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.14ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 974.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 878.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 2.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 3.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 956.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 857.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 983.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 970.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 982.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 979.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 915.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 935.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 981.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 864.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.19ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 943.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 880.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 949.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 909.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 845.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 952.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 879.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 947.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 851.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 956.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 984.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 917.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.14ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 950.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 808.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 886.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 828.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 944.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 868.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 954.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 969.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 959.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 963.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 893.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 953.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 2.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 954.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 861.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 964.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 998.00µs",
  ],
}
`;

exports[`importFromLinuxPerf forks.txt 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.13817600000766106,
      "totalWeight": 0.13817600000766106,
    },
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0.0019000000029336661,
      "totalWeight": 0.005566999985603616,
    },
  ],
  "name": "swapper",
  "stacks": Array [
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 13.90ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 985.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 3.03ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]) 922.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 65.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 4.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]) 978.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 7.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 20.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 924.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 2.08ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 902.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.09ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 927.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 25.22ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 16.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 968.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 828.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.24ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 923.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 833.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.23ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 6.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 942.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 15.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 990.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 32.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 961.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 904.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 14.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.11ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 791.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 15.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 62.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.16ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 17.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 930.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 22.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 834.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.20ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 20.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 925.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 993.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 28.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 755.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.25ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 30.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 923.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.02ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 984.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 992.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 991.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.00ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 992.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 19.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 969.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 27.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 780.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 6.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.24ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 949.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 30.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 973.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 988.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 16.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 983.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 998.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 836.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 63.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.16ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 755.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 82.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.09ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 8.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 16.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 983.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 18.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 985.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 17.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 985.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.00ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 991.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 20.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 866.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.16ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 5.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 761.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.23ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 6.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 937.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.02ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 985.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.02ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 981.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 7.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 994.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 990.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 15.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 984.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 823.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.22ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 946.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 15.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 996.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 16.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 991.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 7.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 963.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 948.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.11ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 952.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 15.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 992.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 789.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.25ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 945.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 28.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 838.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.18ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 944.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.00ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 987.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 988.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 15.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 837.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.18ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 964.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 15.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 976.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 4.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.00ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.00ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 29.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 935.00µs",
  ],
}
`;

exports[`importFromLinuxPerf forks.txt 3`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.05202100001042709,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.05202100001042709,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "main (/workdir/forks)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.05202100001042709,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z4betav (/workdir/forks)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.02182100006029941,
      "totalWeight": 0.022801000042818487,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5alphav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.0292199999676086,
      "totalWeight": 0.0292199999676086,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.002001999964704737,
      "totalWeight": 0.002001999964704737,
    },
  ],
  "name": "forks tid: 11",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 877.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 4.11ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 3.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 885.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav;??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 980.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.98ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 8.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 4.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.16ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.87ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 5.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 3.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.83ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 4.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.02ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.02ms",
  ],
}
`;

exports[`importFromLinuxPerf forks.txt 4`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.049998999980743974,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.049998999980743974,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "main (/workdir/forks)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.049998999980743974,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5alphav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.02360800004680641,
      "totalWeight": 0.024652000021887943,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z4betav (/workdir/forks)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.02534699995885603,
      "totalWeight": 0.02534699995885603,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.0010439999750815332,
      "totalWeight": 0.0010439999750815332,
    },
  ],
  "name": "forks tid: 10",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.99ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 4.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.99ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 3.88ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.94ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 976.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav;??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 4.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.98ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 6.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 974.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 4.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 970.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.86ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 3.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.94ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.04ms",
  ],
}
`;

exports[`importFromLinuxPerf forks.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf forks.txt: profileGroup.name 1`] = `"forks.txt"`;

exports[`importFromLinuxPerf simple.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13503000000491738,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13503000000491738,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13503000000491738,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.023366000037640333,
      "totalWeight": 0.0669989999732934,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.04101399992941879,
      "totalWeight": 0.04101399992941879,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5alphav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.049319000041577965,
      "totalWeight": 0.049319000041577965,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5gammav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.021330999996280298,
      "totalWeight": 0.021330999996280298,
    },
  ],
  "name": "simple-terminat tid: 10",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z4betav 714.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.24ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 939.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 932.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 961.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 982.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 990.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 963.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 964.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 888.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.14ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 959.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 971.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 925.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 974.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 951.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 984.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 986.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 932.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 830.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.19ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 965.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 913.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 900.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.11ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 959.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 930.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 977.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 2.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 932.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 802.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 850.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 961.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 879.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 956.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 853.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.19ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 968.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 968.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 855.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 947.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 827.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.16ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 923.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 950.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 947.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 803.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.24ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 948.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 821.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 971.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 980.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 973.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 945.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 859.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.20ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 949.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 812.00µs",
  ],
}
`;

exports[`importFromLinuxPerf simple.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf simple.txt: profileGroup.name 1`] = `"simple-terminat tid: 10"`;

exports[`importFromLinuxPerf simple-with-header.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13538200000766665,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13538200000766665,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13538200000766665,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.023108000081265345,
      "totalWeight": 0.06850400011171587,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.046864000003552064,
      "totalWeight": 0.046864000003552064,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5alphav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.0441640000208281,
      "totalWeight": 0.0441640000208281,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5gammav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.02124599990202114,
      "totalWeight": 0.02124599990202114,
    },
  ],
  "name": "simple-terminat tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 941.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.13ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 969.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 869.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.22ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 885.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 945.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 900.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 938.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 946.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 2.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 945.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 985.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 919.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 978.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 934.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 891.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 960.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 834.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.22ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 919.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 858.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.21ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 945.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 951.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 986.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 868.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.14ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 963.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 912.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 977.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 860.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 830.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.16ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 867.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 900.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.24ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 942.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 990.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 913.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 966.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 921.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 975.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 911.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.11ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 963.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 924.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 975.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 881.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 961.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 953.00µs",
  ],
}
`;

exports[`importFromLinuxPerf simple-with-header.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf simple-with-header.txt: profileGroup.name 1`] = `"simple-terminat tid: 9"`;

exports[`importFromLinuxPerf simple-with-pids.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13526400001137517,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13526400001137517,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13526400001137517,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.018921999930171296,
      "totalWeight": 0.06427999996230938,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.05648200010182336,
      "totalWeight": 0.05648200010182336,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5gammav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.02255599995260127,
      "totalWeight": 0.02255599995260127,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5alphav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.03730400002677925,
      "totalWeight": 0.03730400002677925,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.0011980000126641244,
      "totalWeight": 0.0011980000126641244,
    },
  ],
  "name": "simple-terminat pid: 9 tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 937.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 955.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 986.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 988.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 963.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 981.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 985.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 980.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 990.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 986.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 969.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 978.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 775.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.21ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 924.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 962.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 850.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.20ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 961.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 753.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.24ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 985.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 876.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 891.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.11ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 979.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 961.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 936.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 870.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.14ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 965.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 931.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 813.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.21ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 781.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 814.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.19ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 886.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.16ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.13ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 977.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 848.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.21ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 816.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 961.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 851.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.19ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 949.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 2.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 965.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 980.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 866.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.20ms",
  ],
}
`;

exports[`importFromLinuxPerf simple-with-pids.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf simple-with-pids.txt: profileGroup.name 1`] = `"simple-terminat pid: 9 tid: 9"`;

exports[`importFromLinuxPerf system-wide.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5alphav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.03986700001405552,
      "totalWeight": 0.03986700001405552,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.023403000028338283,
      "totalWeight": 0.07245100001455285,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.054213999974308535,
      "totalWeight": 0.05508499997085892,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5gammav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.01987999997800216,
      "totalWeight": 0.01987999997800216,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.0008709999965503812,
      "totalWeight": 0.0008709999965503812,
    },
  ],
  "name": "simple-terminat tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 984.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 930.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.21ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav;??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 871.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.92ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 2.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 973.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 877.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.17ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 964.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 842.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.18ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 969.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 939.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 979.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 842.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.20ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 945.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 936.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 2.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 964.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 988.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 893.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 982.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 986.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 961.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.98ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 952.00µs",
  ],
}
`;

exports[`importFromLinuxPerf system-wide.txt 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.13641200002166443,
      "totalWeight": 0.13641200002166443,
    },
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0.0018109999946318567,
      "totalWeight": 0.0018939999863505363,
    },
  ],
  "name": "swapper",
  "stacks": Array [
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.09ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]) 956.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 68.00µs",
    "??? ([unknown]);??? ([unknown]) 855.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 38.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 31.00µs",
    "??? ([kernel.kallsyms]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 45.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 6.96ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 44.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 111.22ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 793.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 8.13ms",
  ],
}
`;

exports[`importFromLinuxPerf system-wide.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf system-wide.txt: profileGroup.name 1`] = `"system-wide.txt"`;
